# mycmatrix

./: .gitignore  Makefile  README.md  install.sh  mycmatrix.c  yapematrix  yapematrix.c
.github/: CODEOWNERS
.github/workflows/: release.yml
script/: demo.py  pyproject.toml
