[tool.poetry]
name = "maskCreatorMatrixEffect"
version = "0.1.0"
description = "Matrix effect with image to mask converter"
authors = ["david"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.0.0"
numpy = "^2.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
